tests/ui/duplicate_enum_discriminants.stderr
error: discriminant value `10` already exists
 --> $DIR/duplicate_enum_discriminants.rs:5:9
  |
5 |         V2 = 10,
  |         ^^^^^^^

error: discriminant value `11` already exists
  --> $DIR/duplicate_enum_discriminants.rs:11:9
   |
11 |         V3 = 11,
   |         ^^^^^^^
